--- a/code/server/config.ini
+++ b/code/server/config.ini
@@ -1,7 +1,15 @@
 [general]
 
+; Scale the input sketch to 50% (0.5) of the default resolution (short edge=512px)
+sketch_zoom_factor=0.5
+
 ; Style2Paints's default input sketch resolution (short edge=1024px)
 ; sketch_zoom_factor=1
 
-; Scale the input sketch to 50% (0.5) of the default resolution (short edge=512px)
-sketch_zoom_factor=0.5
+; ------------------------------
+
+; Disable image super-resolution 
+; enable_super_resolution=False
+
+; Enable image super-resolution for the final painting
+enable_super_resolution=True
