--- a/code/server/config.ini
+++ b/code/server/config.ini
@@ -1,6 +1,6 @@
 [general]
 
-; Scale the input sketch to 50% (0.5) of the default resolution (short edge=512px)
+; <Turbo> Scale the input sketch and draft to 50% (0.5) of the default resolution (short edge=512px)
 sketch_zoom_factor=0.5
 
 ; Style2Paints's default input sketch resolution (short edge=1024px)
@@ -8,7 +8,7 @@ sketch_zoom_factor=0.5
 
 ; ------------------------------
 
-; Disable image super-resolution 
+; <Turbo> Disable image super-resolution 
 ; enable_super_resolution=False
 
 ; Enable image super-resolution for the final painting
